fix: navlink border spacing nissue

--- a/src/app/components/navbar/navlink.module.scss
+++ b/src/app/components/navbar/navlink.module.scss
@@ -14,8 +14,8 @@
     bottom: 0;
 
     @media screen and (min-width: 600px) {
-      bottom: .2rem;
-      height: -5px;
+      bottom: -5px;
+      height: 5px;
     }
   }
 
